language switcher on Firefox issue done

--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ li#polylang-3:after {
 
 @media only screen and (max-width: 460px){
 	#lang_choice_polylang-3 {
-		padding: 5px 0 5px 5px;
+		padding: 5px 12px 5px 5px;
 		font-size: 14px;
 	}
 	li#polylang-3:after{
